package edu.byui.cit.text;

import android.view.View;


public interface ClickListener {
	void clicked(View button);
}
