package edu.byui.cit.text;

class Handler {
	/* progs, nextIsProgrammatic, and replacing onItemSelected with
	 * itemSelected are all necessary because the Android Spinner class
	 * does not distinguish between selection events generated by the
	 * app and those generated by the user. */
	private long progs = 0;

	final void nextIsProgrammatic() {
		++progs;
	}

	final boolean isProgrammatic() {
		boolean isProg = progs > 0;
		if (isProg) {
			--progs;
		}
		return isProg;
	}
}
